<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
    <!-- Campos do cabeçalho -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/qual_o_valor_em_real"
        android:textSize="25sp" />
    <EditText
        android:id="@+id/edit_real"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:width="150dp"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        android:textColor="@color/colorSecundaryText"
        android:textSize="30sp" />
    <!-- Campos do dolar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_em_dolar"
                android:textColor="@color/colorSecundaryText"
                android:textSize="15sp" />
            <EditText
                android:id="@+id/edit_dolar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number|numberDecimal"
                android:textColor="@color/colorSecundaryText"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conversao_dolar"
                android:textColor="@color/colorSecundaryText"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/txt_dollar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="0,00"
                android:textColor="@color/colorSecundaryText"
                android:textSize="25sp" />
        </LinearLayout>

    </LinearLayout>
    <!-- Campos do euro -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/valor_em_euro"
                android:textColor="@color/colorSecundaryText"
                android:textSize="15sp" />
            <EditText
                android:id="@+id/edit_euro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number|numberDecimal"
                android:textColor="@color/colorSecundaryText" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/conversao_euro"
                android:textColor="@color/colorSecundaryText"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/txt_euro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="0,00"
                android:textColor="@color/colorSecundaryText"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>
    <!-- Botões rodapé -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_clear"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="80dp"
            android:padding="10dp"
            android:background="@color/colorSecundaryText"
            android:text="@string/clear"
            android:textColor="@color/colorLight"
            android:textStyle="normal" />
        <Button
            android:id="@+id/btn_calcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/calcular"
            android:layout_marginLeft="1dp"
            android:padding="10dp"
            android:textColor="@color/colorLight"
            android:textStyle="normal" />
    </LinearLayout>
</LinearLayout>
